<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.fragments.CollectionsFragment">

    <TableRow
        android:id="@+id/rowTitles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/RowTitle">

        <TextView
            android:layout_weight="2"
            android:gravity="start|center_vertical"
            android:text="@string/column_title_operation"
            style="@style/TableTitleText" />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_title_treemap"
            style="@style/TableTitleText" />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_title_hashmap"
            style="@style/TableTitleText" />
    </TableRow>

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowTitles"
        style="@style/ScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_adding_new"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingTreeMapTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingTreeMap"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingHashMapTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingHashMap"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

            <TableRow style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_search_by_key"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textSearchByKeyTreeMapTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarSearchByKeyTreeMap"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textSearchByKeyHashMapTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarSearchByKeyHashMap"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_marginBottom="@dimen/row_margin_bottom"
                style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_removing"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemovingTreeMapTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemovingTreeMap"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemovingHashMapTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemovingHashMap"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>