<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.fragments.CollectionsFragment">

    <TableRow
        android:id="@+id/rowTitles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/RowTitle">

        <TextView
            android:layout_weight="2"
            android:gravity="start|center_vertical"
            android:text="@string/column_title_operation"
            style="@style/TableTitleText" />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_title_arraylist"
            style="@style/TableTitleText" />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_title_linkledlist"
            style="@style/TableTitleText" />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_title_copyonwritearraylist"
            style="@style/TableTitleText" />
    </TableRow>

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowTitles"
        style="@style/ScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_adding_in_the_beginning"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheBeginningArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheBeginningArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheBeginningLinkedListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheBeginningLinkedList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheBeginningCopyOnWriteArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheBeginningCopyOnWriteArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

            <TableRow style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_adding_in_the_middle"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheMiddleArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheMiddleArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheMiddleLinkedListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheMiddleLinkedList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheMiddleCopyOnWriteArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheMiddleCopyOnWriteArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

            <TableRow style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_adding_in_the_end"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheEndArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheEndArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheEndLinkedListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheEndLinkedList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textAddingInTheEndCopyOnWriteArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarAddingInTheEndCopyOnWriteArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

            <TableRow style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_search_by_value"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textSearchByValueArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarSearchByValueArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textSearchByValueLinkedListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarSearchByValueLinkedList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textSearchByValueCopyOnWriteArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarSearchByValueCopyOnWriteArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

            <TableRow style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_removing_in_the_beginning"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheBeginningArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheBeginningArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheBeginningLinkedListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheBeginningLinkedList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheBeginningCopyOnWriteArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheBeginningCopyOnWriteArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

            <TableRow style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_removing_in_the_middle"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheMiddleArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheMiddleArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheMiddleLinkedListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheMiddleLinkedList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheMiddleCopyOnWriteArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheMiddleCopyOnWriteArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_marginBottom="@dimen/row_margin_bottom"
                style="@style/TableRow">

                <TextView
                    android:text="@string/row_title_removing_in_the_end"
                    style="@style/TableRowTitleText" />

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheEndArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheEndArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout
                    tools:ignore="TooManyViews"
                    style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheEndLinkedListTime"
                        android:text="@string/default_cell_text"
                        tools:ignore="TooManyViews"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheEndLinkedList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

                <LinearLayout style="@style/TableCell">

                    <TextView
                        android:id="@+id/textRemoveInTheEndCopyOnWriteArrayListTime"
                        android:text="@string/default_cell_text"
                        style="@style/TableTimeText" />

                    <ProgressBar
                        android:id="@+id/progressBarRemoveInTheEndCopyOnWriteArrayList"
                        style="@style/ProgressBarIndeterminateHorizontal" />
                </LinearLayout>

            </TableRow>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>